# desktop-widget

./: .npmrc  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  README_DATABASE.md  build.rs  schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  shortcuts.rs  todos.rs
src-tauri/hooks/: postUninstallScript.sh  windows.nsh
src-tauri/icons/: icon.icns
src-tauri/migration/src/: lib.rs  m202407020_000001_init_.rs  main.rs
src-tauri/migrations/2024_01_01_000001_create_events_table/: down.sql  up.sql
src-tauri/service/: Cargo.toml
src-tauri/service/src/: lib.rs  mutations.rs  queries.rs  transactions.rs
src-tauri/service/src/models/: mod.rs  shortcut.rs  todo.rs
src-tauri/service/src/queries/: shortcut.rs  todo.rs
src-tauri/src/: db.rs  lib.rs  main.rs  window_snap.rs
src-tauri/src/commands/: database.rs  database_diesel.rs  events.rs  events_diesel.rs  greet.rs  mod.rs  settings.rs  setup.rs  shortcut.rs  shortcut_commands.rs  todo.rs
src-tauri/src/jobs/: db.rs
src-tauri/src/plugins/: mod.rs
src-tauri/src/plugins/window_state_custom/: lib.rs
src-tauri/src/utils/: image.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/(loading)/splashscreen/: page.tsx
src/app/(view)/: layout.tsx  page.tsx
src/app/(view)/components/: greet-button.tsx  index.ts  todo-list.tsx
src/app/(view)/components/calendar/: helpers.ts  index.tsx  interfaces.ts  mocks.ts  requests.ts  schemas.ts  types.ts
src/app/(view)/components/calendar/components/: calendar.tsx  change-badge-variant-input.tsx  client-container.tsx
src/app/(view)/components/calendar/components/agenda-view/: agenda-day-group.tsx  agenda-event-card.tsx  calendar-agenda-view.tsx
src/app/(view)/components/calendar/components/dialogs/: add-event-dialog.tsx  edit-event-dialog.tsx  event-details-dialog.tsx  event-form.tsx
src/app/(view)/components/calendar/components/dnd/: custom-drag-layer.tsx  dnd-provider.tsx  draggable-event.tsx  droppable-day-cell.tsx  droppable-time-block.tsx
src/app/(view)/components/calendar/components/header/: calendar-header.tsx  date-navigator.tsx  today-button.tsx
src/app/(view)/components/calendar/components/month-view/: calendar-month-view.tsx  day-cell.tsx  event-bullet.tsx  month-event-badge.tsx
src/app/(view)/components/calendar/components/single-calendar/: index.tsx
src/app/(view)/components/calendar/components/week-and-day-view/: calendar-day-view.tsx  calendar-time-line.tsx  calendar-week-view.tsx  day-view-multi-day-events-row.tsx  delete-event-button.tsx  event-block.tsx  week-view-multi-day-events-row.tsx
src/app/(view)/components/calendar/components/year-view/: calendar-year-view.tsx  year-view-day-cell.tsx  year-view-month.tsx
src/app/(view)/components/calendar/contexts/: calendar-context.tsx
src/app/(view)/components/calendar/hooks/: use-events.ts  use-update-event.ts
src/app/(view)/components/shortcut/: index.tsx  shortcut-item.tsx
src/app/(view)/components/todo-list/: event-item.tsx  index.tsx
src/components/: index.ts  providers.tsx
src/components/configurable-form/: FormField.stories.tsx  configurable-form.tsx  index.tsx  types.ts
src/components/data-table/: data-table-cell.tsx  data-table-wrapper.tsx  demo.tsx  enums.ts  filter-form.tsx  index.tsx  table.tsx
src/components/date-picker/: date-picker.stories.tsx  date-picker.tsx  date-range-picker.stories.tsx  date-range-picker.tsx
src/components/layout/: index.ts  responsive-layout.tsx  splashscreen-wrapper.tsx  title-bar.module.css  title-bar.tsx  window-operations.tsx
src/components/loading/: index.tsx
src/components/loading-button/: index.tsx
src/components/pagination/: index.tsx
src/components/tag/: index.tsx  tag.tsx  tags.tsx
src/components/text-ellipsis-tooltip/: index.tsx
src/components/ui/: calendar.tsx  dialog.tsx  form.tsx  index.ts  mobile-optimized.tsx
src/components/window-snap/: index.tsx
src/hooks/: use-event.ts  use-shotcut.ts
src/lib/: debounce.ts  format.ts  snap-to-edge.tsx
src/provider/: index.tsx  mode-toggle.tsx
src/service/: event.ts  index.ts  shortcut.ts  todo.ts
src/types/: index.ts  shortcut.ts  todo.ts
