[package]
name = "desktop-widget"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = [] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-window-state = "2.3.0"
tauri-plugin-log = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
log = "0.4"
tauri-plugin-dialog = "2"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"

# Diesel ORM 依赖
diesel = { version = "2.1.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
