[package]
name = "desktop-widget"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = [] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-window-state = "2.3.0"
tauri-plugin-log = "2.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

dirs = "5.0.1"
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "^0.4"
apalis = { version = "0.5", features = [
  "sqlite",
  "limit",
  "tracing",
  "tokio-comp",
] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
libsqlite3-sys = { version = "^0", features = ["bundled"] }

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["sqlite"]


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
