[package]
name = "desktop-widget"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.0", features = ["macos-private-api"] }
tauri-plugin-autostart = "2.5.0"
tauri-plugin-window-state = "2.3.0"
tauri-plugin-log = "2.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

dirs = "5.0.1"
migration = { path = "./migration" }
service = { path = "./service" }
entity = { path = "./entity" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "^0.4"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-opener = "2.4.0"
base64 = "0.22"
image = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.54", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation", "Win32_Storage_FileSystem"] }
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.24"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["sqlite"]


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
